FIxed css and javascript to make pages contain entirely the map image. The preventing strange invisible units.

--- a/Mollwitz/Kolin1757/all.css
+++ b/Mollwitz/Kolin1757/all.css
@@ -564,7 +564,6 @@ fieldset {
 
 #gameViewer {
   position: fixed;
-  overflow: hidden;
   background: #ccc;
   margin-bottom: 5px;
   width: 100%; }
