--- a/commonStyle.scss
+++ b/commonStyle.scss
@@ -514,9 +514,6 @@ fieldset{
 }
 #gameViewer{
   position:fixed;
-//  border:10px solid #555;
-//  border-radius:10px;
-  overflow:hidden;
   background:#ccc;
   margin-bottom:5px;
   width:100%;
